[package]
name = "qbtools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 's'
lto = true

[profile.release-no-lto]
inherits = "release"
lto = false

[features]
default = ["all-commands", "all-output-formats", "cmdline"]
# groups
all-commands = ["cmd-export"]
all-output-formats = ["toml", "yaml"]
# commands
cmd-export = []
cmd-get = []
cmd-search = []
# formats
toml = ["dep:toml"]
yaml = ["dep:serde_yaml"]
# misc
production = []
# modes for binary
cmdline = []
interactive = []

[dependencies]
clap = { version = "4.0.28", features = ["derive"] }
concat-string = "1.0.1"
die-exit = "0.4.0"
env_logger = "0.10.0"
http = "0.2"
log = "0.4"
once_cell = "1.18.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.5", optional = true }

# custom crates
quickbooks-types = { path = "../quickbooks-types" }
quickbooks-ureq  = { path = "../quickbooks-ureq" }
